        Stopped DF window from receiving input when unfocused on OS X
        Fixed issues with keybindings involving Ctrl-A and Ctrl-Z, as well as Alt-E/U/N on OS X
        Multiple contexts can now be specified when adding keybindings
        Keybindings can now use F10-F12 and 0-9
        Plugin system is no longer restricted to plugins that exist on startup
    Lua
        Scripts can be enabled with the built-in enable/disable commands
        A new function, reqscript(), is available as a safer alternative to script_environment()
        Lua viewscreens can choose not to intercept the OPTIONS keybinding
    New internal commands
        kill-lua: Interrupt running Lua scripts
        type: Show where a command is implemented
    New plugins
        confirm: Adds confirmation dialogs for several potentially dangerous actions
        fix-unit-occupancy: Fixes issues with unit occupancy, such as faulty "unit blocking tile" messages (bug 3499)
        title-version (formerly vshook): Display DFHack version on title screen
    New scripts
        burial:  sets all unowned coffins to allow burial ("-pets" to allow pets too)
        fix-ster:  changes fertility/sterility of animals or dwarves
        view-item-info:  adds information and customisable descriptions to item viewscreens
        warn-starving:  check for starving, thirsty, or very drowsy units and pause with warning if any are found
        modtools/create-unit: create new units from nothing
        modtools/equip-item: a script to equip items on units
        points:  set number of points available at embark screen
    New tweaks
        embark-profile-name: Allows the use of lowercase letters when saving embark profiles
        kitchen-keys: Fixes DF kitchen meal keybindings
        kitchen-prefs-color: Changes color of enabled items to green in kitchen preferences
        kitchen-prefs-empty: Fixes a layout issue with empty kitchen tabs